--- a/.github/workflows/sync-mirror.yml
+++ b/.github/workflows/sync-mirror.yml
@@ -25,6 +25,7 @@ jobs:
         env:
           SYNC_TOKEN: "${{ secrets.GH_SYNC_TOKEN }}"
         run: |
+          echo "${{sender.organzation}}"
           # The remote 'origin' refers to the mirror.
           # The remote 'upstream' refers to the repository being mirrored.
           BRANCH="${GITHUB_REF#refs/heads/}"
