--- a/.github/workflows/make-artifacts.yml
+++ b/.github/workflows/make-artifacts.yml
@@ -29,7 +29,7 @@ jobs:
     uses: kminehart/patch-testing/.github/workflows/use-artifacts.yml@main
     with:
       run-id: ${{ github.run_id }}
-      artifact: artifacts-*
+      pattern: artifacts-*
     needs:
       - create
 
