--- a/.github/workflows/use-artifacts.yml
+++ b/.github/workflows/use-artifacts.yml
@@ -23,4 +23,4 @@ jobs:
           pattern: ${{ inputs.pattern }}
           run-id: ${{ inputs.run-id }}
           path: ./artifact
-      - run: ls -al artifact
+      - run: mkdir out && rsync -r artifact/*/* out
